# labTFG

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MEMORY_SYSTEM_REPORT.md  README.md  docker-compose.yml  ruff.toml
phase1-pablo/: .env.example  Dockerfile  pyproject.toml
phase1-pablo/docs/: DESIGN.md  SCAFFOLD.md  agrex-integration.md  eval-system.md  research-memory-rewrite-status.md  research-memory-rewrite.md  researcher-design.md
phase1-pablo/docs/formal-documentation/: 01-system-architecture.md  02-agent-workflow.md  03-memory-and-knowledge-system.md  04-shared-infrastructure.md  05-key-design-decisions.md  06-literature-to-cite.md  README.md
phase1-pablo/docs/plans/: 2026-03-09-denis-models.md  (+1 more)
phase1-pablo/evals/: .gitignore  README.md  topics-bulk.txt
phase1-pablo/scripts/: backfill_kg_entities.py  calibrate_canonicalize_tau.py  kg_backfill_health_relation_memories.py  kg_rollup_reflections.py  kg_temporal_to_pg.py  qdrant_drop_artifacts.py  qdrant_purge_eval.py  qdrant_reindex_pipeline_memories.py  qdrant_strip_confidence.py  restore_eval_bundle.py  run-mock.sh
phase1-pablo/tests/: test_canonicalize.py  test_canonicalize_ancestor.py  test_canonicalize_thresholds.py  test_cli.py  test_event_logger.py  test_event_store.py  test_feedback.py  test_feedback_helpers.py  test_feedback_port.py  test_parsing.py  test_pipeline_state.py  test_robustness.py  test_router_partial_runs.py  test_router_review_build.py  test_router_review_reason.py  test_router_stuck_loop.py  test_router_trace.py  test_routing_llm.py  test_routing_llm_integration.py  test_runs_api.py  test_server.py  test_server_event_log.py  test_server_ws.py  test_smoke.py  test_temporal_consistency.py  test_web_feedback.py
phase1-pablo/web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
phase2-juan/: .gitignore  DISEÑO.md  Dockerfile  TODO.md  acuerdo-tfg.md  pyproject.toml
phase2-juan/backend/: Dockerfile  README.md  railway.json
phase2-juan/benchmark/: EVAL_NEXT_STEPS.md  JUDGE_PROMPT.md  __init__.py  baselines.py  export_judge_bundle.py  faithfulness.py  lab_report.py  llm_meter.py  model_keys.py  run_analyst_pr.py  run_e2e.py  run_faithfulness.py  run_golden_scenarios.py  run_lab_eval.py  scenarios.py  scoring.py
phase2-juan/docs/: 2026-03-12-generic-environment-design.md  2026-03-12-generic-environment-plan.md  DESIGN.md  architecture.excalidraw  evaluation-framework.md  gen_excalidraw.py  gen_storage.py  storage_layer.excalidraw
phase2-juan/frontend/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  railway.json  record-demo.mjs  record-kb.mjs  vite.config.ts
phase2-juan/simlab/: __init__.py  analyst.py  api.py  architect.py  charts.py  cli.py  critical_events.py  environment.py  grounding.py  loop.py  model_loader.py  nlsql.py  orchestrator.py  reporter.py  spec.py  tools.py  tracker.py  utils.py
phase2-juan/tests/: conftest.py  test_adapter.py  test_agent_runtime_budgets.py  test_analyst.py  test_api_knowledge_graph.py  test_api_knowledge_memories.py  test_api_knowledge_provenance.py  test_api_report_download.py  test_architect.py  test_benchmark_faithfulness.py  test_benchmark_scoring.py  test_caso_models.py  test_charts_pdf_style.py  test_critical_events.py  test_environment.py  test_export_judge_bundle.py  test_grounding.py  test_judge_prompt.py  test_kg_prefetch.py  test_lab_report.py  test_loop.py  test_model_loader.py  test_model_loader_postgres.py  test_nlsql.py  test_orchestrator.py  test_orchestrator_autocompaction.py  test_orchestrator_chat_persistence.py  test_orchestrator_knowledge.py  test_orchestrator_live_simulation_tools.py  test_orchestrator_predictions.py  test_orchestrator_query_history_tool.py  test_orchestrator_simulation_idempotency.py  test_query_history.py  test_query_history_e2e.py  test_query_history_safety.py  test_reporter.py  test_reporter_latex.py  test_sim_memory_init.py  test_spec.py  test_store.py  (+2 more)
phase2-juan/tmp/: repro_exp.py
phase2-juan/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
shared/: alembic.ini  pyproject.toml
shared/migrations/: env.py
shared/shared/: __init__.py  artifacts.py  database.py  embedding.py  knowledge_graph.py  memories.py  models.py  pipeline_memories.py  services.py  settings.py  simulation_observations.py  storage.py  store.py  tokenizer.py  vector_store.py
shared/tests/: conftest.py  test_artifacts.py  test_chat_messages_schema.py  test_database.py  test_embedding.py  test_knowledge_graph.py  test_knowledge_graph_schema.py  test_knowledge_graph_temporal.py  test_knowledge_graph_vector_index.py  test_knowledge_lifecycle.py  test_lifecycle.py  test_memories.py  test_memories_decay.py  test_memories_temporal.py  test_models_constraints.py  test_pipeline_memories.py  test_pipeline_memories_decay.py  test_pipeline_memories_temporal.py  test_settings.py  test_sim_memory_init.py  test_storage.py  test_store_extras.py  test_vector_store.py  test_vector_store_filter.py  test_vector_store_kg_entities.py
tests/: conftest.py  pyproject.toml
tests/e2e/: test_pipeline_smoke.py  test_router_pipeline.py  test_sim_memory_loop.py
tests/integration/: test_cross_service_round_trip.py  test_infrastructure_health.py  test_sim_memory_writer.py  test_sim_recall_roundtrip.py
tests/real_llm/: conftest.py  test_real_llm_embedding.py  test_real_llm_extraction.py  test_real_llm_memory_agent.py  test_real_llm_routing.py  test_real_llm_runtime.py
(+762 files in other folders)
