[project]
name = "decisionlab"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ppazosp", email = "pablopazosp3@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
