[project]
name = "decisionlab"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ppazosp", email = "pablopazosp3@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "ddgs>=9.11.2",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
decisionlab = "decisionlab.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src", "examples", "../phase2-juan"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require internet access (deselect with -k 'not integration')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
]
