[project]
name = "simlab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "python-dotenv",
    "rich",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[project.scripts]
simlab = "simlab.cli:main"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../phase1-pablo/src",
    "../phase1-pablo/examples",
]
markers = [
    "integration: tests that require external services (API keys)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "numpy>=2.4.3",
]
