[project]
name = "simlab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    # websockets 16.0 enforces strict server-side Origin validation, which
    # breaks the Vite dev proxy (browser :5175 → ws :8000 mismatch → HTTP 403).
    # Pin <16 until uvicorn exposes a flag to disable this check.
    "websockets<16",
    "shared",
    "matplotlib>=3.9.0",
    "sqlparse>=0.5.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "simlab"
module-root = ""

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../phase1-pablo/src",
    "../phase1-pablo/examples",
]
markers = [
    "integration: tests that require external services (API keys)",
]
asyncio_mode = "auto"

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "numpy>=2.4.3",
    "pytest-asyncio>=1.3.0",
]
