[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0",
    "aioboto3>=13.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "neo4j>=5.0",
    "qdrant-client[fastembed]>=1.15.2",
    "voyageai>=0.3",
    "zeroentropy>=0.1.0a11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12",
]

[tool.ruff]
extend = "../ruff.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring docker-compose services (Postgres, Neo4j, Qdrant, MinIO)",
]
